[project]
name = "hf-master-pinger"
version = "0.3.0"
description = "Centralized pinger to keep HF Spaces alive"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.136.1",
    "uvicorn>=0.47.0",
    "httpx>=0.28.0",
    "apscheduler>=3.11.0",
    "gradio>=6.14.0",
]

[dependency-groups]
dev = ["pyright>=1.1.409"]
