[project]
name = "hf-master-pinger"
version = "0.3.0"
description = "Centralized pinger to keep HF Spaces alive"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.139.2",
    "uvicorn>=0.51.0",
    "httpx>=0.28.0",
    "apscheduler>=3.11.3",
    "gradio>=6.20.0",
]

[dependency-groups]
dev = ["pyright>=1.1.411"]
